# multirow

./: CMakeLists.txt  README.md
cmake/: FindCPLEX.cmake  FindLAPACKE.cmake
infinity/benchmark/: CMakeLists.txt  Makefile  rebuild.sh  run.sh
infinity/benchmark/2row-cont/: 10teams.pre.yaml  air03.pre.yaml  bell3a.pre.yaml  bell5.pre.yaml  blend2.pre.yaml  cap6000.pre.yaml  danoint.pre.yaml  dcmulti.pre.yaml  egout.pre.yaml  fiber.pre.yaml  fixnet6.pre.yaml  flugpl.pre.yaml  gen.pre.yaml  gesa2.pre.yaml  gesa2_o.pre.yaml  gesa3.pre.yaml  gesa3_o.pre.yaml  gt2.pre.yaml  harp2.pre.yaml  khb05250.pre.yaml  l152lav.pre.yaml  lseu.pre.yaml  markshare1.pre.yaml  markshare2.pre.yaml  mas74.pre.yaml  misc03.pre.yaml  misc06.pre.yaml  misc07.pre.yaml  mitre.pre.yaml  mkc.pre.yaml  mod008.pre.yaml  mod010.pre.yaml  mod011.pre.yaml  modglob.pre.yaml  nw04.pre.yaml  p0033.pre.yaml  p0201.pre.yaml  p0282.pre.yaml  p0548.pre.yaml  p2756.pre.yaml  (+16 more)
infinity/benchmark/2row-lift/: 10teams.pre.yaml  air03.pre.yaml  bell3a.pre.yaml  bell5.pre.yaml  blend2.pre.yaml  cap6000.pre.yaml  danoint.pre.yaml  dcmulti.pre.yaml  egout.pre.yaml  fiber.pre.yaml  fixnet6.pre.yaml  flugpl.pre.yaml  gen.pre.yaml  gesa2.pre.yaml  gesa2_o.pre.yaml  gesa3.pre.yaml  gesa3_o.pre.yaml  gt2.pre.yaml  harp2.pre.yaml  khb05250.pre.yaml  l152lav.pre.yaml  lseu.pre.yaml  markshare1.pre.yaml  markshare2.pre.yaml  mas74.pre.yaml  misc03.pre.yaml  misc06.pre.yaml  misc07.pre.yaml  mitre.pre.yaml  mkc.pre.yaml  mod008.pre.yaml  mod010.pre.yaml  mod011.pre.yaml  modglob.pre.yaml  nw04.pre.yaml  p0033.pre.yaml  p0201.pre.yaml  p0282.pre.yaml  p0548.pre.yaml  p2756.pre.yaml  (+16 more)
infinity/benchmark/3row-cont/: 10teams.pre.yaml  air03.pre.yaml  bell3a.pre.yaml  bell5.pre.yaml  blend2.pre.yaml  cap6000.pre.yaml  danoint.pre.yaml  dcmulti.pre.yaml  egout.pre.yaml  fiber.pre.yaml  fixnet6.pre.yaml  flugpl.pre.yaml  gen.pre.yaml  gesa2.pre.yaml  gesa2_o.pre.yaml  gesa3.pre.yaml  gesa3_o.pre.yaml  gt2.pre.yaml  harp2.pre.yaml  khb05250.pre.yaml  l152lav.pre.yaml  lseu.pre.yaml  markshare1.pre.yaml  markshare2.pre.yaml  mas74.pre.yaml  misc03.pre.yaml  misc06.pre.yaml  misc07.pre.yaml  mitre.pre.yaml  mkc.pre.yaml  mod008.pre.yaml  mod010.pre.yaml  mod011.pre.yaml  modglob.pre.yaml  nw04.pre.yaml  p0033.pre.yaml  p0201.pre.yaml  p0282.pre.yaml  p0548.pre.yaml  p2756.pre.yaml  (+16 more)
infinity/benchmark/3row-lift/: 10teams.pre.yaml  air03.pre.yaml  bell3a.pre.yaml  bell5.pre.yaml  blend2.pre.yaml  cap6000.pre.yaml  danoint.pre.yaml  dcmulti.pre.yaml  egout.pre.yaml  fiber.pre.yaml  fixnet6.pre.yaml  flugpl.pre.yaml  gen.pre.yaml  gesa2.pre.yaml  gesa2_o.pre.yaml  gesa3.pre.yaml  gesa3_o.pre.yaml  gt2.pre.yaml  harp2.pre.yaml  khb05250.pre.yaml  l152lav.pre.yaml  lseu.pre.yaml  markshare1.pre.yaml  markshare2.pre.yaml  mas74.pre.yaml  misc03.pre.yaml  misc06.pre.yaml  misc07.pre.yaml  mitre.pre.yaml  mkc.pre.yaml  mod008.pre.yaml  mod010.pre.yaml  mod011.pre.yaml  modglob.pre.yaml  nw04.pre.yaml  p0033.pre.yaml  p0201.pre.yaml  p0282.pre.yaml  p0548.pre.yaml  p2756.pre.yaml  (+16 more)
infinity/benchmark/5row-cont/: 10teams.pre.yaml  air03.pre.yaml  bell3a.pre.yaml  bell5.pre.yaml  blend2.pre.yaml  cap6000.pre.yaml  danoint.pre.yaml  dcmulti.pre.yaml  egout.pre.yaml  fiber.pre.yaml  fixnet6.pre.yaml  flugpl.pre.yaml  gen.pre.yaml  gesa2.pre.yaml  gesa2_o.pre.yaml  gesa3.pre.yaml  gesa3_o.pre.yaml  gt2.pre.yaml  harp2.pre.yaml  khb05250.pre.yaml  l152lav.pre.yaml  lseu.pre.yaml  markshare1.pre.yaml  markshare2.pre.yaml  mas74.pre.yaml  (+31 more)
lifting/: README.md
lifting/benchmark/: CMakeLists.txt  run_experiments.sh
multirow/: CMakeLists.txt
multirow/include/multirow/: cg.h  double.h  geometry.h  lfree2d.h  linalg.h  lp.h  mir.h  params.h  rational.h  stats.h  util.h
multirow/src/: cg.c  double.c  geometry.c  lfree2d.c  linalg.c  lp.c  mir.c  rational.c  stats.c  util.c
multirow/tests/: cg-test.cpp  double-test.cpp  geometry-test.cpp  linalg-test.cpp
onerow/benchmark/: CMakeLists.txt  Makefile  generate_tables
qxx/: CMakeLists.txt
qxx/include/qxx/: debug.hpp  dlu.hpp  dmat.hpp  dvec.hpp  rational.hpp  slu.hpp  smat.hpp  strprintf.hpp  svec.hpp
qxx/src/: dlu.cpp  dmat.cpp  dvec.cpp  rational.cpp  slu.cpp  smat.cpp  strprintf.cpp  svec.cpp
(+315 files in other folders)
